# src/configs/swagger.json
@@ -325,8 +325,8 @@
         }
       }
     },
-    "/blogs/{id}/like": {
-      "put": {
+    "/blogs/{id}/postLike": {
+      "post": {
         "tags": [
           "Blogs"
         ],
@@ -417,9 +417,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "404": {
             "description": "Not Found"
@@ -632,6 +629,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
